Fix bottom spacing with margin on article-body

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
+  padding-bottom: 120px;
 }
 
 .article {
@@ -282,6 +283,7 @@ body {
   font-size: 17px;
   line-height: 1.7;
   color: var(--text-primary);
+  margin-bottom: 100px;
 }
 
 .article-body > * + * {
